--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="confirm">Confirm</string>
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
-    <string name="pending_count">Pending Reservations: 0</string>
-    <string name="confirmed_count">Approved Future Reservations: 0</string>
+    <string name="pending_count">Pending Reservations</string>
+    <string name="confirmed_count">Approved Future Reservations</string>
     <string name="view_bookings">View Bookings</string>
     <string name="booking_summary">Booking Summary</string>
     <string name="station_id">Station ID:</string>
